--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,38 @@ $main-color: beige;
 body {
   background-color: $main-color;
 }
+
+h1 {
+  color: rgb(218, 218, 183);
+  font-size: 40pt;
+}
+
+.row {
+  display: flex;
+}
+
+.col {
+  width: 100px;
+  height: 100px;
+  border: 2px solid cadetblue;
+  margin: 1px;
+}
+
+
+.col.checked {
+  background-color: cadetblue;
+}
+
+
+.reset {
+  display: none;
+}
+
+.reset.show {
+  display: inline-block;
+}
+
+// 리셋인데 쇼가 없으면 논
+// .reset:not(.show) {
+//   display: none;
+// }
